add more unit tests and improve